# Rcmd

./: .gitignore  Cargo.toml  README.md
resources/: appsettings.json
src/: build.rs  lib.rs  main.rs  test.rs
src/clib/: CMakeLists.txt
src/clink/: clib.rs  curl.rs  mod.rs  std.rs  uuid.rs
src/data/: mod.rs
src/data/redis/: mod.rs
src/math/: mod.rs
src/util/: file.rs  json.rs  mod.rs
