[package]
name = "r_cmd"
version = "0.1.0"
authors = ["weixin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
syn = "1.0.33"
libc = "0.2.71"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0.114"
serde_json = "1.0.56"

redis = "0.16.0"
mysql = "18.2.0"