[package]
name = "r_cmd"
version = "0.1.0"
authors = ["weixin"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
syn = "1.0.41"
libc = "0.2.77"
log = "0.4.11"
env_logger = "0.7.1"
serde = "1.0.116"
serde_json = "1.0.57"

redis = "0.17.0"
mysql = "19.0.1"
mongodb = "1.1.1"

uuid = "0.8.1"
tch = "0.2.0"

[build-dependencies]
cc = "1.0.46"
